2022/national/Web_Service_Provisioning/k8s/stress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stress
  namespace: skills
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: stress-alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: skills/dedicated=app
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 Forbidden"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: stress
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: response-403
                port:
                  name: use-annotation
